# serializer version: 1
# name: test_from_ics[attendee]
  list([
    ParsedProperty(
      name='begin',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='attendee',
      params=list([
        ParsedPropertyParameter(
          name='RSVP',
          values=list([
            'TRUE',
          ]),
        ),
        ParsedPropertyParameter(
          name='ROLE',
          values=list([
            'REQ-PARTICIPANT',
          ]),
        ),
      ]),
      value='mailto: jsmith@example.com',
    ),
    ParsedProperty(
      name='attendee',
      params=list([
        ParsedPropertyParameter(
          name='DELEGATED-TO',
          values=list([
            'mailto:jdoe@example.com',
            'mailto:jqpublic @example.com',
          ]),
        ),
      ]),
      value='mailto:jsmith@example.com',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VEVENT',
    ),
  ])
# ---
# name: test_from_ics[comma]
  list([
    ParsedProperty(
      name='begin',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='description',
      params=list([
        ParsedPropertyParameter(
          name='ALTREP',
          values=list([
            'cid:part1.0001@example.org',
          ]),
        ),
      ]),
      value="The Fall'98 Wild Wizards Conference - - Las Vegas\\, NV\\, USA",
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VEVENT',
    ),
  ])
# ---
# name: test_from_ics[emoji]
  list([
    ParsedProperty(
      name='begin',
      params=None,
      value='VCALENDAR',
    ),
    ParsedProperty(
      name='version',
      params=None,
      value='2.0',
    ),
    ParsedProperty(
      name='prodid',
      params=None,
      value='-//hacksw/handcal//NONSGML v1.0//EN',
    ),
    ParsedProperty(
      name='begin',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='uid',
      params=None,
      value='19970610T172345Z-AF23B2@example.com',
    ),
    ParsedProperty(
      name='dtstamp',
      params=None,
      value='19970610T172345Z',
    ),
    ParsedProperty(
      name='dtstart',
      params=None,
      value='19971225',
    ),
    ParsedProperty(
      name='dtend',
      params=None,
      value='19971226',
    ),
    ParsedProperty(
      name='summary',
      params=None,
      value='🎄',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VCALENDAR',
    ),
  ])
# ---
# name: test_from_ics[fold]
  list([
    ParsedProperty(
      name='begin',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='description',
      params=None,
      value='This is a lo ng description that exists on a long line.',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VEVENT',
    ),
  ])
# ---
# name: test_from_ics[icalendar_object]
  list([
    ParsedProperty(
      name='begin',
      params=None,
      value='VCALENDAR',
    ),
    ParsedProperty(
      name='version',
      params=None,
      value='2.0',
    ),
    ParsedProperty(
      name='prodid',
      params=None,
      value='-//hacksw/handcal//NONSGML v1.0//EN',
    ),
    ParsedProperty(
      name='begin',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='uid',
      params=None,
      value='19970610T172345Z-AF23B2@example.com',
    ),
    ParsedProperty(
      name='dtstamp',
      params=None,
      value='19970610T172345Z',
    ),
    ParsedProperty(
      name='dtstart',
      params=None,
      value='19970714T170000Z',
    ),
    ParsedProperty(
      name='dtend',
      params=None,
      value='19970715T040000Z',
    ),
    ParsedProperty(
      name='summary',
      params=None,
      value='Bastille Day Party',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VCALENDAR',
    ),
  ])
# ---
# name: test_from_ics[languages]
  list([
    ParsedProperty(
      name='begin',
      params=None,
      value='VCALENDAR',
    ),
    ParsedProperty(
      name='version',
      params=None,
      value='2.0',
    ),
    ParsedProperty(
      name='prodid',
      params=None,
      value='-//hacksw/handcal//NONSGML v1.0//EN',
    ),
    ParsedProperty(
      name='begin',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='uid',
      params=None,
      value='19970610T172345Z-AF23B2@example.com',
    ),
    ParsedProperty(
      name='dtstamp',
      params=None,
      value='19970610T172345Z',
    ),
    ParsedProperty(
      name='dtstart',
      params=None,
      value='19970714T170000Z',
    ),
    ParsedProperty(
      name='dtend',
      params=None,
      value='19970715T040000Z',
    ),
    ParsedProperty(
      name='summary',
      params=None,
      value='žmogus',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='begin',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='uid',
      params=None,
      value='19970610T172345Z-AF23B3@example.com',
    ),
    ParsedProperty(
      name='dtstamp',
      params=None,
      value='19970610T172345Z',
    ),
    ParsedProperty(
      name='dtstart',
      params=None,
      value='19970714T170000Z',
    ),
    ParsedProperty(
      name='dtend',
      params=None,
      value='19970715T040000Z',
    ),
    ParsedProperty(
      name='summary',
      params=None,
      value='中文',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='begin',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='uid',
      params=None,
      value='19970610T172345Z-AF23B4@example.com',
    ),
    ParsedProperty(
      name='dtstamp',
      params=None,
      value='19970610T172345Z',
    ),
    ParsedProperty(
      name='dtstart',
      params=None,
      value='19970714T170000Z',
    ),
    ParsedProperty(
      name='dtend',
      params=None,
      value='19970715T040000Z',
    ),
    ParsedProperty(
      name='summary',
      params=None,
      value='кириллица',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='begin',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='uid',
      params=None,
      value='19970610T172345Z-AF23B5@example.com',
    ),
    ParsedProperty(
      name='dtstamp',
      params=None,
      value='19970610T172345Z',
    ),
    ParsedProperty(
      name='dtstart',
      params=None,
      value='19970714T170000Z',
    ),
    ParsedProperty(
      name='dtend',
      params=None,
      value='19970715T040000Z',
    ),
    ParsedProperty(
      name='summary',
      params=None,
      value='Ελληνικά',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='begin',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='uid',
      params=None,
      value='19970610T172345Z-AF23B6@example.com',
    ),
    ParsedProperty(
      name='dtstamp',
      params=None,
      value='19970610T172345Z',
    ),
    ParsedProperty(
      name='dtstart',
      params=None,
      value='19970714T170000Z',
    ),
    ParsedProperty(
      name='dtend',
      params=None,
      value='19970715T040000Z',
    ),
    ParsedProperty(
      name='summary',
      params=None,
      value='עִברִית',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='begin',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='uid',
      params=None,
      value='19970610T172345Z-AF23B7@example.com',
    ),
    ParsedProperty(
      name='dtstamp',
      params=None,
      value='19970610T172345Z',
    ),
    ParsedProperty(
      name='dtstart',
      params=None,
      value='19970714T170000Z',
    ),
    ParsedProperty(
      name='dtend',
      params=None,
      value='19970715T040000Z',
    ),
    ParsedProperty(
      name='summary',
      params=None,
      value='日本語',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='begin',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='uid',
      params=None,
      value='19970610T172345Z-AF23B8@example.com',
    ),
    ParsedProperty(
      name='dtstamp',
      params=None,
      value='19970610T172345Z',
    ),
    ParsedProperty(
      name='dtstart',
      params=None,
      value='19970714T170000Z',
    ),
    ParsedProperty(
      name='dtend',
      params=None,
      value='19970715T040000Z',
    ),
    ParsedProperty(
      name='summary',
      params=None,
      value='한국어',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='begin',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='uid',
      params=None,
      value='19970610T172345Z-AF23B9@example.com',
    ),
    ParsedProperty(
      name='dtstamp',
      params=None,
      value='19970610T172345Z',
    ),
    ParsedProperty(
      name='dtstart',
      params=None,
      value='19970714T170000Z',
    ),
    ParsedProperty(
      name='dtend',
      params=None,
      value='19970715T040000Z',
    ),
    ParsedProperty(
      name='summary',
      params=None,
      value='ไทย',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='begin',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='uid',
      params=None,
      value='19970610T172345Z-AF23B10@example.com',
    ),
    ParsedProperty(
      name='dtstamp',
      params=None,
      value='19970610T172345Z',
    ),
    ParsedProperty(
      name='dtstart',
      params=None,
      value='19970714T170000Z',
    ),
    ParsedProperty(
      name='dtend',
      params=None,
      value='19970715T040000Z',
    ),
    ParsedProperty(
      name='summary',
      params=None,
      value='देवनागरी',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VCALENDAR',
    ),
  ])
# ---
# name: test_from_ics[params]
  list([
    ParsedProperty(
      name='begin',
      params=None,
      value='VCALENDAR',
    ),
    ParsedProperty(
      name='name',
      params=list([
        ParsedPropertyParameter(
          name='PARAM-NAME',
          values=list([
            'PARAM-VALUE1',
          ]),
        ),
      ]),
      value='VALUE',
    ),
    ParsedProperty(
      name='name',
      params=list([
        ParsedPropertyParameter(
          name='PARAM-NAME',
          values=list([
            'PARAM+VALUE2',
          ]),
        ),
      ]),
      value='VALUE',
    ),
    ParsedProperty(
      name='name',
      params=list([
        ParsedPropertyParameter(
          name='PARAM-NAME',
          values=list([
            'PARAM VALUE3',
          ]),
        ),
      ]),
      value='VALUE',
    ),
    ParsedProperty(
      name='name',
      params=list([
        ParsedPropertyParameter(
          name='PARAM-NAME',
          values=list([
            'PARAM:VALUE4',
          ]),
        ),
      ]),
      value='VALUE',
    ),
    ParsedProperty(
      name='description',
      params=None,
      value='',
    ),
    ParsedProperty(
      name='description',
      params=list([
        ParsedPropertyParameter(
          name='TYPE',
          values=list([
            '',
          ]),
        ),
      ]),
      value='',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VCALENDAR',
    ),
  ])
# ---
# name: test_from_ics[params_empty]
  list([
    ParsedProperty(
      name='begin',
      params=None,
      value='VCALENDAR',
    ),
    ParsedProperty(
      name='name',
      params=list([
        ParsedPropertyParameter(
          name='PARAM-NAME',
          values=list([
            '',
          ]),
        ),
      ]),
      value='VALUE',
    ),
    ParsedProperty(
      name='name',
      params=list([
        ParsedPropertyParameter(
          name='PARAM-NAME',
          values=list([
            '',
            'Value2',
            '',
            'VALUE4',
            'VALUE5',
          ]),
        ),
      ]),
      value='VALUE',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VCALENDAR',
    ),
  ])
# ---
# name: test_from_ics[params_quoted]
  list([
    ParsedProperty(
      name='begin',
      params=None,
      value='VCALENDAR',
    ),
    ParsedProperty(
      name='name',
      params=list([
        ParsedPropertyParameter(
          name='PARAM-NAME',
          values=list([
            'PARAM-VALUE',
          ]),
        ),
      ]),
      value='VALUE',
    ),
    ParsedProperty(
      name='name',
      params=list([
        ParsedPropertyParameter(
          name='PARAM-NAME',
          values=list([
            'PARAM:VALUE',
          ]),
        ),
      ]),
      value='VALUE',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VCALENDAR',
    ),
  ])
# ---
# name: test_from_ics[params_rfc6868_caret]
  list([
    ParsedProperty(
      name='begin',
      params=None,
      value='VCALENDAR',
    ),
    ParsedProperty(
      name='x-test',
      params=list([
        ParsedPropertyParameter(
          name='KEY',
          values=list([
            '^',
          ]),
        ),
      ]),
      value='VALUE',
    ),
    ParsedProperty(
      name='x-test-2',
      params=list([
        ParsedPropertyParameter(
          name='KEY',
          values=list([
            '^n',
          ]),
        ),
      ]),
      value='VALUE',
    ),
    ParsedProperty(
      name='x-test-3',
      params=list([
        ParsedPropertyParameter(
          name='KEY',
          values=list([
            'a^',
          ]),
        ),
      ]),
      value='VALUE',
    ),
    ParsedProperty(
      name='x-test-4',
      params=list([
        ParsedPropertyParameter(
          name='KEY',
          values=list([
            'a^x',
          ]),
        ),
      ]),
      value='VALUE',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VCALENDAR',
    ),
  ])
# ---
# name: test_from_ics[params_rfc6868_ical]
  list([
    ParsedProperty(
      name='begin',
      params=None,
      value='VCALENDAR',
    ),
    ParsedProperty(
      name='attendee',
      params=list([
        ParsedPropertyParameter(
          name='CN',
          values=list([
            'George Herman "Babe" Ruth',
          ]),
        ),
      ]),
      value='mailto:babe@example.com',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VCALENDAR',
    ),
  ])
# ---
# name: test_from_ics[params_rfc6868_vcard]
  list([
    ParsedProperty(
      name='begin',
      params=None,
      value='VCALENDAR',
    ),
    ParsedProperty(
      name='geo',
      params=list([
        ParsedPropertyParameter(
          name='X-ADDRESS',
          values=list([
            '''
              Pittsburgh Pirates
              115 Federal St
              Pittsburgh, PA 15212
            ''',
          ]),
        ),
      ]),
      value='geo:40.446816,-80.00566',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VCALENDAR',
    ),
  ])
# ---
# name: test_from_ics[params_rfc7986_calendar]
  list([
    ParsedProperty(
      name='begin',
      params=None,
      value='VCALENDAR',
    ),
    ParsedProperty(
      name='name',
      params=list([
        ParsedPropertyParameter(
          name='LANGUAGE',
          values=list([
            'en',
          ]),
        ),
      ]),
      value='My Calendar',
    ),
    ParsedProperty(
      name='description',
      params=list([
        ParsedPropertyParameter(
          name='LANGUAGE',
          values=list([
            'en',
          ]),
        ),
      ]),
      value='Description of the calendar',
    ),
    ParsedProperty(
      name='uid',
      params=None,
      value='calendar-unique-id-123',
    ),
    ParsedProperty(
      name='last-modified',
      params=None,
      value='20260708T144000Z',
    ),
    ParsedProperty(
      name='url',
      params=None,
      value='http://example.com/calendar.ics',
    ),
    ParsedProperty(
      name='categories',
      params=None,
      value='WORK,PROJECT',
    ),
    ParsedProperty(
      name='refresh-interval',
      params=list([
        ParsedPropertyParameter(
          name='VALUE',
          values=list([
            'DURATION',
          ]),
        ),
      ]),
      value='PT1H',
    ),
    ParsedProperty(
      name='source',
      params=list([
        ParsedPropertyParameter(
          name='VALUE',
          values=list([
            'URI',
          ]),
        ),
      ]),
      value='http://example.com/source.ics',
    ),
    ParsedProperty(
      name='color',
      params=None,
      value='turquoise',
    ),
    ParsedProperty(
      name='image',
      params=list([
        ParsedPropertyParameter(
          name='DISPLAY',
          values=list([
            'BADGE',
          ]),
        ),
        ParsedPropertyParameter(
          name='FMTTYPE',
          values=list([
            'image/png',
          ]),
        ),
      ]),
      value='http://example.com/badge.png',
    ),
    ParsedProperty(
      name='image',
      params=list([
        ParsedPropertyParameter(
          name='VALUE',
          values=list([
            'BINARY',
          ]),
        ),
        ParsedPropertyParameter(
          name='ENCODING',
          values=list([
            'BASE64',
          ]),
        ),
        ParsedPropertyParameter(
          name='FMTTYPE',
          values=list([
            'image/png',
          ]),
        ),
      ]),
      value='aGVsbG8=',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VCALENDAR',
    ),
  ])
# ---
# name: test_from_ics[params_rfc7986_component]
  list([
    ParsedProperty(
      name='begin',
      params=None,
      value='VCALENDAR',
    ),
    ParsedProperty(
      name='begin',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='uid',
      params=None,
      value='event-1',
    ),
    ParsedProperty(
      name='dtstart',
      params=None,
      value='20260708T150000Z',
    ),
    ParsedProperty(
      name='dtend',
      params=None,
      value='20260708T160000Z',
    ),
    ParsedProperty(
      name='color',
      params=None,
      value='blue',
    ),
    ParsedProperty(
      name='image',
      params=list([
        ParsedPropertyParameter(
          name='DISPLAY',
          values=list([
            'THUMBNAIL',
          ]),
        ),
        ParsedPropertyParameter(
          name='FMTTYPE',
          values=list([
            'image/jpeg',
          ]),
        ),
      ]),
      value='http://example.com/event.jpg',
    ),
    ParsedProperty(
      name='image',
      params=list([
        ParsedPropertyParameter(
          name='DISPLAY',
          values=list([
            'x-custom-display',
          ]),
        ),
      ]),
      value='http://example.com/custom.jpg',
    ),
    ParsedProperty(
      name='conference',
      params=list([
        ParsedPropertyParameter(
          name='FEATURE',
          values=list([
            'AUDIO',
            'VIDEO',
          ]),
        ),
        ParsedPropertyParameter(
          name='LABEL',
          values=list([
            'Zoom Meeting',
          ]),
        ),
      ]),
      value='https://zoom.us/j/123456',
    ),
    ParsedProperty(
      name='conference',
      params=list([
        ParsedPropertyParameter(
          name='FEATURE',
          values=list([
            'x-custom-feature',
          ]),
        ),
      ]),
      value='https://custom-conf.com',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='begin',
      params=None,
      value='VTODO',
    ),
    ParsedProperty(
      name='uid',
      params=None,
      value='todo-1',
    ),
    ParsedProperty(
      name='dtstart',
      params=None,
      value='20260708T150000Z',
    ),
    ParsedProperty(
      name='color',
      params=None,
      value='red',
    ),
    ParsedProperty(
      name='image',
      params=list([
        ParsedPropertyParameter(
          name='DISPLAY',
          values=list([
            'FULLSIZE',
          ]),
        ),
      ]),
      value='http://example.com/todo.jpg',
    ),
    ParsedProperty(
      name='conference',
      params=list([
        ParsedPropertyParameter(
          name='FEATURE',
          values=list([
            'CHAT',
          ]),
        ),
        ParsedPropertyParameter(
          name='LABEL',
          values=list([
            'Slack Channel',
          ]),
        ),
      ]),
      value='https://slack.com/123',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VTODO',
    ),
    ParsedProperty(
      name='begin',
      params=None,
      value='VJOURNAL',
    ),
    ParsedProperty(
      name='uid',
      params=None,
      value='journal-1',
    ),
    ParsedProperty(
      name='dtstart',
      params=None,
      value='20260708T150000Z',
    ),
    ParsedProperty(
      name='color',
      params=None,
      value='green',
    ),
    ParsedProperty(
      name='image',
      params=list([
        ParsedPropertyParameter(
          name='DISPLAY',
          values=list([
            'BADGE',
          ]),
        ),
      ]),
      value='http://example.com/journal.jpg',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VJOURNAL',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VCALENDAR',
    ),
  ])
# ---
# name: test_from_ics[rdate]
  list([
    ParsedProperty(
      name='begin',
      params=None,
      value='VCALENDAR',
    ),
    ParsedProperty(
      name='rdate',
      params=list([
        ParsedPropertyParameter(
          name='VALUE',
          values=list([
            'DATE',
          ]),
        ),
      ]),
      value='19970304,19970504,19970704,19970904',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VCALENDAR',
    ),
  ])
# ---
# name: test_from_ics[unicode]
  list([
    ParsedProperty(
      name='begin',
      params=None,
      value='VCALENDAR',
    ),
    ParsedProperty(
      name='prodid',
      params=None,
      value='-//ABC Corporation//NONSGML My Product//EN',
    ),
    ParsedProperty(
      name='version',
      params=None,
      value='2.0',
    ),
    ParsedProperty(
      name='begin',
      params=None,
      value='VTODO',
    ),
    ParsedProperty(
      name='dtstamp',
      params=None,
      value='19980130T134500Z',
    ),
    ParsedProperty(
      name='sequence',
      params=None,
      value='2',
    ),
    ParsedProperty(
      name='uid',
      params=None,
      value='uid4@example.com',
    ),
    ParsedProperty(
      name='due',
      params=None,
      value='19980415T000000',
    ),
    ParsedProperty(
      name='status',
      params=None,
      value='NEEDS-ACTION',
    ),
    ParsedProperty(
      name='summary',
      params=None,
      value='Birthday',
    ),
    ParsedProperty(
      name='begin',
      params=None,
      value='VALARM',
    ),
    ParsedProperty(
      name='action',
      params=None,
      value='AUDIO',
    ),
    ParsedProperty(
      name='trigger',
      params=None,
      value='19980403T120000Z',
    ),
    ParsedProperty(
      name='attach',
      params=list([
        ParsedPropertyParameter(
          name='FILENAME',
          values=list([
            'Fødselsdag_40.pdf',
          ]),
        ),
      ]),
      value='https://someurl.com',
    ),
    ParsedProperty(
      name='repeat',
      params=None,
      value='4',
    ),
    ParsedProperty(
      name='duration',
      params=None,
      value='PT1H',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VALARM',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VTODO',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VCALENDAR',
    ),
  ])
# ---
# name: test_from_ics[vcalendar_emoji]
  list([
    ParsedProperty(
      name='begin',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='dtstamp',
      params=None,
      value='20221202T075310',
    ),
    ParsedProperty(
      name='uid',
      params=None,
      value='5deea302-7216-11ed-b1b6-48d2240d04ae',
    ),
    ParsedProperty(
      name='dtstart',
      params=None,
      value='20221202T085500',
    ),
    ParsedProperty(
      name='dtend',
      params=None,
      value='20221202T090000',
    ),
    ParsedProperty(
      name='summary',
      params=None,
      value='🎄emojis!',
    ),
    ParsedProperty(
      name='created',
      params=None,
      value='20221202T075310',
    ),
    ParsedProperty(
      name='sequence',
      params=None,
      value='0',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VEVENT',
    ),
  ])
# ---
# name: test_from_ics[vevent]
  list([
    ParsedProperty(
      name='begin',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='uid',
      params=None,
      value='19970901T130000Z-123401@example.com',
    ),
    ParsedProperty(
      name='dtstamp',
      params=None,
      value='19970901T130000Z',
    ),
    ParsedProperty(
      name='dtstart',
      params=None,
      value='19970903T163000Z',
    ),
    ParsedProperty(
      name='dtend',
      params=None,
      value='19970903T190000Z',
    ),
    ParsedProperty(
      name='summary',
      params=None,
      value='Annual Employee Review',
    ),
    ParsedProperty(
      name='class',
      params=None,
      value='PRIVATE',
    ),
    ParsedProperty(
      name='categories',
      params=None,
      value='BUSINESS,HUMAN RESOURCES',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VEVENT',
    ),
  ])
# ---
# name: test_from_ics[vtodo]
  list([
    ParsedProperty(
      name='begin',
      params=None,
      value='VTODO',
    ),
    ParsedProperty(
      name='uid',
      params=None,
      value='20070313T123432Z-456553@example.com',
    ),
    ParsedProperty(
      name='dtstamp',
      params=None,
      value='20070313T123432Z',
    ),
    ParsedProperty(
      name='due',
      params=list([
        ParsedPropertyParameter(
          name='VALUE',
          values=list([
            'DATE',
          ]),
        ),
      ]),
      value='20070501',
    ),
    ParsedProperty(
      name='summary',
      params=None,
      value='Submit Quebec Income Tax Return for 2006',
    ),
    ParsedProperty(
      name='class',
      params=None,
      value='CONFIDENTIAL',
    ),
    ParsedProperty(
      name='categories',
      params=None,
      value='FAMILY,FINANCE',
    ),
    ParsedProperty(
      name='status',
      params=None,
      value='NEEDS-ACTION',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VTODO',
    ),
  ])
# ---
# name: test_from_ics[x-name]
  list([
    ParsedProperty(
      name='begin',
      params=None,
      value='VEVENT',
    ),
    ParsedProperty(
      name='x-description',
      params=None,
      value='This is a description',
    ),
    ParsedProperty(
      name='x-ical-description',
      params=None,
      value='This is a description',
    ),
    ParsedProperty(
      name='x-ical-1',
      params=None,
      value='This is another x-name',
    ),
    ParsedProperty(
      name='end',
      params=None,
      value='VEVENT',
    ),
  ])
# ---
